--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "English Verbs",
     "description": "English verb conjugation.",
-    "version": "0.2.0",
+    "version": "0.2.2",
     "author":"Adão Junior",
     "offline_enabled": true,
     "manifest_version": 2,
@@ -10,6 +10,10 @@
             "scripts": ["js/background.js"]
         }
     },
+    "permissions": [
+      "https://www.google-analytics.com/",
+      "storage"
+    ],
     "icons": {
         "16":"img/icon-16.png",
         "20":"img/icon-20.png",
