--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: english-verbs
 version: 0.3.0
 dependencies:
-  angular2: 2.0.0-beta.0
+  angular2: ^2.0.0-beta.1
   browser: ^0.10.0
   dart_to_js_script_rewriter: ^0.1.0
   usage: ^1.0.1
