--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,11 @@
-name: english-verbs
-version: 0.3.5
+name: english_verbs
+version: 0.3.6
 dependencies:
   angular2: ^2.0.0-beta.1
   browser: ^0.10.0
   dart_to_js_script_rewriter: ^0.1.0
   usage: ^1.0.1
   ng_mediaquery: ^0.1.2
-dev_dependencies:
-  pub_serve_rewrites: ^0.0.1
 transformers:
 - angular2:
     entry_points: web/main.dart
