--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-merge": "^1.8.1",
     "typescript": "4.9.4"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "lint-staged": "^13.1.0",
     "postcss": "^8.4.20",
     "prettier": "2.8.1",
+    "prettier-plugin-tailwindcss": "^0.2.1",
     "tailwindcss": "^3.2.4"
   }
 }
