--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "pre-commit": "lint-staged"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.13",
     "@next/font": "13.1.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
