--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.13",
     "@next/font": "13.1.1",
+    "@sentry/nextjs": "^7.28.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
