--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "autoprefixer": "^10.4.13",
     "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.2",
