--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,4 +1,7 @@
 {
   "singleQuote": true,
-  "semi": false
+  "semi": false,
+  "importOrder": ["^@/(.*)$", "^[./]"],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true
 }
